--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -13,3 +13,7 @@ RewriteRule ^(.*)$ /public/$1
 #RewriteRule ^ index.php [L]
 RewriteRule ^(/)?$ public/index.php [L] 
 </IfModule>
+
+# HTID:23422420: DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES BELOW
+php_value display_errors 1
+# DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES ABOVE HTID:23422420:
