--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,15 @@
 
 # HTID:23422420: DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES BELOW
 php_value display_errors 1
-# DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES ABOVE HTID:23422420:  
+# DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES ABOVE HTID:23422420:
+
+# Enable URL rewriting
+RewriteEngine On
+
+# Redirect requests for /login to login.php
+RewriteRule ^login$ login.php [L]
+
+# (Optional) Redirect other .php files to routes without .php extension
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^\.]+)$ $1.php [L]
+
