--- a/.htaccess
+++ b/.htaccess
@@ -6,6 +6,9 @@ php_value display_errors 1
 # Enable URL rewriting
 RewriteEngine On
 
+# Redirect requests for /login to login.php
+RewriteRule ^login$ login.php [L]
+
 RewriteEngine On RewriteCond
 %{REQUEST_FILENAME} !-d
 RewriteCond % %{REQUEST_FILENAME} !-f
