--- a/.htaccess
+++ b/.htaccess
@@ -9,7 +9,6 @@ RewriteEngine On
 # Redirect requests for /login to login.php
 RewriteRule ^login$ login.php [L]
 
-RewriteEngine On RewriteCond
-%{REQUEST_FILENAME} !-d
-RewriteCond % %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ $1.php [L]
+# (Optional) Redirect other .php files to routes without .php extension
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^\.]+)$ $1.php [L]
