--- a/.htaccess
+++ b/.htaccess
@@ -6,10 +6,10 @@ php_value display_errors 1
 # Enable URL rewriting
 RewriteEngine On
 
-# Redirect requests for /login to login.php
-RewriteRule ^login$ login.php [L]
+# # Redirect requests for /login to login.php
+# RewriteRule ^login$ login.php [L]
 
-# (Optional) Redirect other .php files to routes without .php extension
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^\.]+)$ $1.php [L]
+# # (Optional) Redirect other .php files to routes without .php extension
+# RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteRule ^([^\.]+)$ $1.php [L]
 
