--- a/.htaccess
+++ b/.htaccess
@@ -3,87 +3,13 @@
 php_value display_errors 1
 # DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES ABOVE HTID:23422420:
 
-# Enable the rewrite engine
 RewriteEngine On
 
-# Map clean URLs to actual file names
-RewriteRule ^login/?$ login.php [L]
-RewriteRule ^register/?$ register.php [L]
-RewriteRule ^dashboard/?$ dashboard.php [L]
+# If the requested file doesn't exist
+RewriteCond %{REQUEST_FILENAME} !-f
 
-# Prevent direct access to .php files
-RewriteCond %{THE_REQUEST} \.php [NC]
-RewriteRule ^ - [R=404,L]
-
-# Ensure the requested file doesn't exist as a directory
+# If the requested directory doesn't exist
 RewriteCond %{REQUEST_FILENAME} !-d
 
-# Check if the requested filename exists with .php extension
-RewriteCond %{REQUEST_FILENAME}.php -f
-
-# Rewrite the URL to append .php internally
-RewriteRule ^(.*)$ $1.php [L]
-
-# Prevent directory listing
-Options -Indexes
-
-# Prevent access to .htaccess file
-<Files .htaccess>
-    Order allow,deny
-    Deny from all
-</Files>
-
-# Prevent direct access to .php files (optional, but recommended)
-# This will redirect example.php to example
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
-RewriteRule ^ %1 [R=301,L]
-
-# BEGIN Security Headers
-
-# Enable HTTP Strict Transport Security (HSTS)
-<IfModule mod_headers.c>
-    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-</IfModule>
-
-# Prevent MIME type sniffing
-<IfModule mod_headers.c>
-    Header always set X-Content-Type-Options "nosniff"
-</IfModule>
-
-# Protect against XSS
-<IfModule mod_headers.c>
-    Header always set X-XSS-Protection "1; mode=block"
-</IfModule>
-
-# Prevent clickjacking
-<IfModule mod_headers.c>
-    Header always set X-Frame-Options "SAMEORIGIN"
-</IfModule>
-
-# Set Referrer Policy
-<IfModule mod_headers.c>
-    Header always set Referrer-Policy "strict-origin-when-cross-origin"
-</IfModule>
-
-# Set Permissions Policy
-<IfModule mod_headers.c>
-    Header always set Permissions-Policy "geolocation=(self https://overrunssatisa.com), microphone=()"
-</IfModule>
-
-# Content Security Policy
-<IfModule mod_headers.c>
-    Header always set Content-Security-Policy "upgrade-insecure-requests"
-</IfModule>
-
-# Hide X-Powered-By Header
-<IfModule mod_headers.c>
-    Header unset X-Powered-By
-</IfModule>
-
-# Replace IP addresses with 'hidden'
-<IfModule mod_headers.c>
-    Header always set X-Client-IP "hidden"
-</IfModule>
-
-
-# END Security Headers
+# Rewrite URL to use .php files without showing the .php extension
+RewriteRule ^([a-zA-Z0-9_-]+)$ $1.php [L]
