--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -1,4 +1,20 @@
-
 # HTID:23422420: DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES BELOW
 php_value display_errors 1
 # DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES ABOVE HTID:23422420:
+
+RewriteEngine On
+
+# Ensure the Rewrite module is enabled
+
+# If the requested file doesn't exist as a physical file
+RewriteCond %{REQUEST_FILENAME} !-f
+
+# If the requested file doesn't exist as a directory
+RewriteCond %{REQUEST_FILENAME} !-d
+
+# Rewrite the URL to add .php internally without showing it in the browser
+RewriteRule ^([a-zA-Z0-9_-]+)$ $1.php [L]
+
+# Redirect requests with .php in the URL to hide the extension
+RewriteCond %{THE_REQUEST} "\s/([^\s]+)\.php[\s?]"
+RewriteRule ^ /%1 [R=301,L]
