--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -4,17 +4,19 @@ php_value display_errors 1
 
 RewriteEngine On
 
-# Ensure the Rewrite module is enabled
-
-# If the requested file doesn't exist as a physical file
+# Rewrite only for .php files in specific routes
+# Ensure the requested file isn't a physical file
 RewriteCond %{REQUEST_FILENAME} !-f
 
-# If the requested file doesn't exist as a directory
+# Ensure the requested file isn't a directory
 RewriteCond %{REQUEST_FILENAME} !-d
 
-# Rewrite the URL to add .php internally without showing it in the browser
+# Ensure the request does not already have a file extension
+RewriteCond %{REQUEST_URI} !\.[a-zA-Z0-9]{2,4}$
+
+# Rewrite the URL to add .php for certain routes
 RewriteRule ^([a-zA-Z0-9_-]+)$ $1.php [L]
 
-# Redirect requests with .php in the URL to hide the extension
+# Redirect .php URLs to hide the extension (only for matching routes)
 RewriteCond %{THE_REQUEST} "\s/([^\s]+)\.php[\s?]"
 RewriteRule ^ /%1 [R=301,L]
