--- a/.htaccess
+++ b/.htaccess
@@ -1,20 +1,15 @@
+
 # HTID:23422420: DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES BELOW
 php_value display_errors 1
 # DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES ABOVE HTID:23422420:
 
 RewriteEngine On
 
-# Ensure the Rewrite module is enabled
-
-# If the requested file doesn't exist as a physical file
+# If the requested file doesn't exist
 RewriteCond %{REQUEST_FILENAME} !-f
 
-# If the requested file doesn't exist as a directory
+# If the requested directory doesn't exist
 RewriteCond %{REQUEST_FILENAME} !-d
 
-# Rewrite the URL to add .php internally without showing it in the browser
+# Rewrite URL to use .php files without showing the .php extension
 RewriteRule ^([a-zA-Z0-9_-]+)$ $1.php [L]
-
-# Redirect requests with .php in the URL to hide the extension
-RewriteCond %{THE_REQUEST} "\s/([^\s]+)\.php[\s?]"
-RewriteRule ^ /%1 [R=301,L]
