--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -4,15 +4,16 @@ php_value display_errors 1
 
 RewriteEngine On
 
-# Preserve your existing URLs that should work (add more as needed)
-RewriteCond %{REQUEST_URI} !^/index\.php
-RewriteCond %{REQUEST_URI} !^/resources/
-RewriteCond %{REQUEST_URI} !^/assets/
-RewriteCond %{REQUEST_URI} !^/css/
-RewriteCond %{REQUEST_URI} !^/js/
-RewriteCond %{REQUEST_URI} !^/images/
+# First redirect from actual PHP file to pretty URL
+RewriteCond %{THE_REQUEST} ^GET\ /[^?\s]+\.php
+RewriteRule (.+)\.php$ /$1 [L,R=301]
 
-# Remove .php extension
+# Then internally redirect from pretty URL to PHP file
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}\.php -f
-RewriteRule ^(.*)$ $1.php [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^/]+)/?$ $1.php [L]
+
+# Handle subfolders like /admin/
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^/]+)/([^/]+)/?$ $1/$2.php [L]
